# CppND-Program-a-Concurrent-Traffic-Simulation

./: CMakeLists.txt  vcpkg.json
.github/workflows/: checks.yml
src/: Intersection.cpp  Intersection.h  TrafficLight.cpp  TrafficLight.h  TrafficObject.cpp  TrafficObject.h  Vehicle.cpp
